added Second commit

--- a/index.html
+++ b/index.html
@@ -29,10 +29,33 @@
             </div>
         </section> 
         <section>
-            <div>
-            <img src="resources/Group 70.png" alt="">
+            <div class="new-year-party">
+                <h2 class="welcome">Welcome to midnight party</h2>
+                <div class="discription">
+                    <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                </div>
+                <div class="join-now">JOIN NOW</div>
+                    <img class="Group" src="resources/Group 70.png" alt="">
             </div>
-
+        </section>
+        <section>
+            <div class="Place">
+                <h4><b><span class="primary-color">Place:</span>New Park hotel</b></h4>
+                <h4><b><span class="primary-color">Date:</span>31 December Night 2023</b></h4>
+                <h4><b><span class="primary-color">Time:</span>Evening 7:30 Pm To 12.30 Am</b></h4>
+                <button class="button">JOIN NOW</button>
+            </div>
+        </section>
+        <section>
+            <div>
+              <div class="comming-soon-2024">
+                <img class="ellipse" src="resources/Ellipse 1.png" alt="">
+                <h4 class="new">NEW BEST OFFER</h4>
+            </div>
+            <div>
+                <h4>NEW BEST OFFER</h4>
+            </div>
+            </div>
         </section>
     </main>
     <footer>
