adder Tthird commit

--- a/index.html
+++ b/index.html
@@ -47,14 +47,17 @@
             </div>
         </section>
         <section>
-            <div>
-              <div class="comming-soon-2024">
-                <img class="ellipse" src="resources/Ellipse 1.png" alt="">
-                <h4 class="new">NEW BEST OFFER</h4>
-            </div>
-            <div>
-                <h4>NEW BEST OFFER</h4>
-            </div>
+            <div class="function">
+                <h4 class="functiwidth">WHAT IS FUNCTIONAL</h4>
+                <h2 class="function-haeder"><b><span class="holiday">Holidays</span> Sale 50%</b></h2>
+                <p class="function-paragraph">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed 
+                    molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id fermentum amet amet sit consectetur.</p>
+                <img class="Rectangle" src="resources/Rectangle 1.png" alt="">
+                <img class="Rectangle" src="resources/Group 44.png" alt="">
+                <div>
+                <img class="group75" src="resources/Group 75.png" alt=""> 
+                <!-- <img class="Rectangle2" src="resources/Rectangle 2.png" alt=""> -->
+                </div>
             </div>
         </section>
     </main>
