--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
     <header>
 <section>
     <div class="images-text">
-        <div class="h5">Happy New Year</div>
+        <div class="h5"><b>Happy New Year</b></div>
         <div>
-            <h2 class="h2">New Year Party</h2>
-            <h2 class="h2">Celebration</h2>
+            <h2 class="h2"><b>New Year Party</b></h2>
+            <h2 class="h2"><b>Celebration</b></h2>
         </div>
     </div>
-    
 </section>
     </header>
     <main>
@@ -34,8 +33,25 @@
                 <div class="discription">
                     <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
                 </div>
-                <div class="join-now">JOIN NOW</div>
+                <div class="join-now"> <button>JOIN NOW</button></div>
                     <img class="Group" src="resources/Group 70.png" alt="">
+            </div>
+        </section>
+        <section>
+            <djiv class="coming-soon">
+                <div>
+                    <h4 class="new-best-offer">NEW BEST OFFER</h4>
+                    <h2 class="coming">Coming Soon</h2>
+                    <p class="coming-soon-paragraph">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                </div>
+                <div>
+                    <img class="Ellipse" src="resources/Ellipse 1.png" alt="">
+                </div>
+                <div>
+                    <h class="class-2024">2024</h2>
+                    <p class="coming-soon-paragraph">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
+                    <img src="resources/Group 96.png" alt="">
+                </div>
             </div>
         </section>
         <section>
@@ -48,17 +64,53 @@
         </section>
         <section>
             <div class="function">
-                <h4 class="functiwidth">WHAT IS FUNCTIONAL</h4>
+                <h4 class="function-haed">WHAT IS FUNCTIONAL</h4>
                 <h2 class="function-haeder"><b><span class="holiday">Holidays</span> Sale 50%</b></h2>
                 <p class="function-paragraph">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed 
                     molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id fermentum amet amet sit consectetur.</p>
-                <img class="Rectangle" src="resources/Rectangle 1.png" alt="">
                 <img class="Rectangle" src="resources/Group 44.png" alt="">
                 <div>
                 <img class="group75" src="resources/Group 75.png" alt=""> 
-                <!-- <img class="Rectangle2" src="resources/Rectangle 2.png" alt=""> -->
+                <img class="Rectangle2" src="resources/Rectangle 2.png" alt="">
                 </div>
             </div>
+        </section>
+        <section>
+            <div class="gift-section">
+            <div>
+                <h5 class="gift">THE BEST GIFTS</h5>
+                <h2 class="portfilio">Our Awesome Portfolio</h2>
+                <p class="gift-paragraph">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+            </div>
+            <div class="row">
+                <div class="column">
+                    <img class="row-column" src="resources/Rectangle 3.png" alt="">
+                    <img class="row-column" src="resources/Rectangle 4.png" alt="">
+                    <img class="row-column" src="resources/Rectangle 5.png" alt="">
+                </div>
+                <div class="column">
+                    <img class="row-column" src="resources/Rectangle 6.png" alt="">
+                    <img class="row-column" src="resources/Rectangle 7.png" alt="">
+                    <img class="row-column" src="resources/Rectangle 8.png" alt="">
+                </div>
+            </div>
+            </div>
+        </section>
+        <section>
+            <div class="group61">
+                <img src="resources/Group 61.png" alt="">
+                <h2 class="Subscribe"><b>Subscribe Newsletter</b></h2>
+                <p class="Subscribe-paragraph">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+            </div>
+        </section>
+        <section>
+            <div class="unsubscribe-div">
+                <h4 class="unsubscribe-haed">44, Big Building Roosevelt Street
+                    Beach Gardens Florida 33410</h4></div>
+                    <div class="unsubscribe-div">
+                <h4 class="unsubscribe-haeder">+00 123 584 124</h4>
+                <h4 class="unsubscribe-haeder">www.website.com</h4>
+                    </div>
         </section>
     </main>
     <footer>
