--- a/index.html
+++ b/index.html
@@ -103,18 +103,28 @@
                 <p class="Subscribe-paragraph">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
             </div>
         </section>
-        <section>
+    </main>
+    <footer>
+        <section class="footer">
             <div class="unsubscribe-div">
-                <h4 class="unsubscribe-haed">44, Big Building Roosevelt Street
-                    Beach Gardens Florida 33410</h4></div>
+                <h4 class="unsubscribe-haed">44, Big Building Roosevelt Street Beach Gardens Florida 33410</h4></div>
                     <div class="unsubscribe-div">
                 <h4 class="unsubscribe-haeder">+00 123 584 124</h4>
                 <h4 class="unsubscribe-haeder">www.website.com</h4>
                     </div>
+                    <hr>
+                <div class="image-div">
+                    <img src="resources/Facebook (1).png" alt="">
+                    <img src="resources/Instagram.png" alt="">
+                    <img src="resources/Linkedin.png" alt="">
+                    <img src="resources/Twitter (2).png" alt="">
+                </div>   
+                <hr> 
+                <div class="last-div">
+                    <h4>2017, All Rights Reserved.</h4>
+                    <h4>Unsubscribe</h4>
+                </div>
         </section>
-    </main>
-    <footer>
-
     </footer>
 </body>
 </html>
