added Sixth commit

--- a/index.html
+++ b/index.html
@@ -106,20 +106,25 @@
     </main>
     <footer>
         <section class="footer">
+            <div class="hr">
             <div class="unsubscribe-div">
-                <h4 class="unsubscribe-haed">44, Big Building Roosevelt Street Beach Gardens Florida 33410</h4></div>
-                    <div class="unsubscribe-div">
-                <h4 class="unsubscribe-haeder">+00 123 584 124</h4>
-                <h4 class="unsubscribe-haeder">www.website.com</h4>
+                <div class="unsubscribe-haed">
+                <h4>44, Big Building Roosevelt Street Beach Gardens Florida 33410</h4></div>
+                    <div>
+                <h4 class="unsubscribe-haed"> <img src="resources/Call.png" alt=""> +00 123 584 124</h4>
+                <h4 class="unsubscribe-haed"> <img src="resources/Website.png" alt=""> www.website.com</h4>
                     </div>
-                    <hr>
+            </div>
+            <hr>
+        </div>
+            <div class="hr">
                 <div class="image-div">
                     <img src="resources/Facebook (1).png" alt="">
                     <img src="resources/Instagram.png" alt="">
-                    <img src="resources/Linkedin.png" alt="">
                     <img src="resources/Twitter (2).png" alt="">
+                    <img src="resources/Linkedin.png" alt="">
                 </div>   
-                <hr> 
+                <hr> </div>
                 <div class="last-div">
                     <h4>2017, All Rights Reserved.</h4>
                     <h4>Unsubscribe</h4>
