added seventh commit

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <section>
     <div class="images-text">
         <div class="h5"><b>Happy New Year</b></div>
-        <div>
+            <div>
             <h2 class="h2"><b>New Year Party</b></h2>
             <h2 class="h2"><b>Celebration</b></h2>
         </div>
-    </div>
+        </div>
 </section>
     </header>
     <main>
@@ -26,7 +26,7 @@
             <div class="new-year-photo">
             <img src="resources/New Year Photo.png" alt="">
             </div>
-        </section> 
+          </section> 
         <section>
             <div class="new-year-party">
                 <h2 class="welcome">Welcome to midnight party</h2>
@@ -98,10 +98,16 @@
         </section>
         <section>
             <div class="group61">
+                <div>
                 <img src="resources/Group 61.png" alt="">
                 <h2 class="Subscribe"><b>Subscribe Newsletter</b></h2>
-                <p class="Subscribe-paragraph">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                <p class="Subscribe-paragraph">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada.</br> Ipsum sed sodales risus ut pellentesque vel euismod. </p>
             </div>
+            <div class="email">
+                <input class="Email" type="Email" placeholder="user@gmail.com" id="subscribe">
+                <button class="Subscribe-button">Subscribe</button>
+            </div>
+        </div>
         </section>
     </main>
     <footer>
